Fixed overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ main {
 	line-height: 1.375em;
 	padding: 1em;
 	min-height: 100vh;
+	overflow: hidden;
 
 	@media screen and (min-width: 720px) {
 		display: flex;
